--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p {
     margin-bottom: 20px;
 }
 
-button {
+button, select {
     padding: 10px 20px;
     margin: 10px;
     font-size: 1rem;
@@ -62,6 +62,13 @@ button {
 
 button:hover {
     background-color: #f50057;
+}
+
+.color-box {
+    width: 100px;
+    height: 100px;
+    margin: 20px auto;
+    border: 2px solid white;
 }
 
 #recordsTable {
